<resources>
    <string name="app_name">PTApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="error_invalid_email">Geçersiz email adresi</string>
    <string name="error_invalid_password">Şifre en az 6, en çok 12 karakterden oluşmalıdır.</string>
    <string name="error_incorrect_password">Hatalı şifre!</string>
    <string name="error_field_required">Zorunlu alan!</string>
    <string name="login_success">Giriş başarılı</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_forgot_password">Şifremi unuttum</string>
    <string name="action_ok">Tamam</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_fam_list">Hane Listesi</string>
    <string name="navigation_today_list">Bugünkü Ziyaretler</string>
    <string name="navigation_send_mail">E-Posta Gönder</string>
    <string name="navigation_communication">İletişim</string>

    <string name="action_settings">Ayarlar</string>

    <string name="form_fam_code">Hane: </string>
    <string name="form_city">Şehir: </string>
    <string name="form_town">İlçe: </string>
    <string name="form_district">Mahalle: </string>
    <string name="form_street">Cadde: </string>
    <string name="form_road">Sokak: </string>
    <string name="form_building_no">Bina No: </string>
    <string name="form_door_no">Kapı No: </string>
    <string name="form_zip_code">Posta Kodu: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
