<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fam_list"
            android:icon="@drawable/ic_show_fam_list"
            android:title="@string/navigation_fam_list" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_show_today_list"
            android:title="@string/navigation_today_list" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/navigation_communication">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_mail"
                android:title="@string/navigation_send_mail" />
        </menu>
    </item>

</menu>
