<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fam_detail_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ipsos.savascilve.ptapp.FamDetailActivity">

    <LinearLayout style="@style/FamDetailHorizontalLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_fam_code"
            style="@style/FamDetailText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/famDetailFamCode"
            style="@style/FamDetailText"
            android:text="FamCode" />
    </LinearLayout>
    <LinearLayout style="@style/FamDetailHorizontalLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_city"
            style="@style/FamDetailText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/famDetailCity"
            style="@style/FamDetailText"/>
    </LinearLayout>
    <LinearLayout style="@style/FamDetailHorizontalLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_town"
            style="@style/FamDetailText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/famDetailTown"
            style="@style/FamDetailText"/>
    </LinearLayout>
    <LinearLayout style="@style/FamDetailHorizontalLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_district"
            style="@style/FamDetailText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/famDetailDistrict"
            style="@style/FamDetailText"/>
    </LinearLayout>

</LinearLayout>
